--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -306,6 +306,6 @@
   }
 
   .interestsContainer {
-    margin-bottom: 3rem;
+    margin-bottom: 0.5rem;
   }
 }
